still trying to fix audio on mobile

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 
 #button{
     font-size: 10vw;
-    background: limegreen;
+    background: grey;
     color: black;
     border: none;
     padding: 3vw 4vw;
